fix: add logout api
